Clean code: use Java21 constructs